@@ -482,7 +482,6 @@ AC_CHECK_NFS_PROT_HEADERS
 AC_STRUCT_MNTENT
 AC_STRUCT_MNTTAB
 AC_STRUCT_NFS_ARGS
-AC_STRUCT_NFS_MOUNT_DATA
 AC_STRUCT_NFS_GFS_MOUNT
 AC_STRUCT_FIELD_NFS_FH
 AC_STRUCT_NFS_FH
